--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!Doctype HTML>
 <Head>
     <link rel="stylesheet" href="css/index.css">
-    <Title>TEst</Title>
+    <Title>Template</Title>
 </Head>
 <Body>
-    <h1>TEst</h1>
     <div id="bg">
         <div class="box-top">
             Ini Top
