--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <Title>Template</Title>
 </Head>
 <Body>
-    <div id="bg">
-        <div class="box-top">
+    <div id="BG">
+        <div class="Header">
             Ini Top
         </div>
-        <div class="box-left">
+        <div class="Dashboard">
             Ini left
         </div>
-        <div class="box-rigth">
+        <div class="Content">
             Ini kanan
         </div>
         <div class="box-content">
