--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <Title>Template</Title>
 </Head>
 <Body>
-    <div id="BG">
-        <div class="Header">
+    <div id="bg">
+        <div class="header">
             Ini Top
         </div>
-        <div class="Dashboard">
+        <div class="dashboard">
             Ini left
         </div>
-        <div class="Content">
+        <div class="content">
             Ini kanan
         </div>
      
