--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!Doctype HTML>
-<Head>
+<head>
     <link rel="stylesheet" href="css/index.css">
-    <Title>Template</Title>
-</Head>
-<Body>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <title>Template</title>
+</head>
+<body>
     <div id="bg">
         <div class="header">
             Ini Top
         </div>
-        <div class="dashboard">
-            Ini left
-        </div>
-        <div class="content">
-            Ini kanan
-        </div>
+		<div class="row">
+			<div class="col-lg-6">
+				<div class="dashboard">
+					Ini left
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="content">
+					Ini kanan
+				</div>
+			</div>
+		</div>
     </div>
-</Body>
+</body>
