--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!Doctype HTML>
+
 <head>
     <link rel="stylesheet" href="css/index.css">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>Template</title>
 </head>
+
 <body>
     <div id="bg">
         <div class="header">
             Ini Top
         </div>
-		<div class="row">
-			<div class="col-lg-6">
-				<div class="dashboard">
-					Ini left
-				</div>
-			</div>
-			<div class="col-lg-6">
-				<div class="content">
-					Ini kanan
-				</div>
-			</div>
-		</div>
+
     </div>
+    <div class="row">
+        <div class="dashboard col-8">
+            Ini dashboard
+        </div>
+        <div class="content col-4">
+            Ini content
+        </div>
+    </div>
+
 </body>
